--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,10 @@
 	<classpathentry kind="lib" path="C:/Users/Nico/Downloads/poi-3.10-FINAL/poi-ooxml-3.10-FINAL-20140208.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Nico/Downloads/poi-3.10-FINAL/poi-ooxml-schemas-3.10-FINAL-20140208.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Nico/Downloads/poi-3.10-FINAL/poi-scratchpad-3.10-FINAL-20140208.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nico/Downloads/jdom-2.0.6/jdom-2.0.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nico/Downloads/jdom-2.0.6/jdom-2.0.6-contrib.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nico/Downloads/jdom-2.0.6/jdom-2.0.6-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nico/Downloads/jdom-2.0.6/jdom-2.0.6-junit.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nico/Downloads/jdom-2.0.6/jdom-2.0.6-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
